<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_3x3">start 3x3</string>
    <string name="start_4x4">start 4x4</string>
    <string name="exit">exit</string>
    <string name="choose_player_names">Choose player names</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="play_vs_computer">Play vs Computer</string>
    <string name="start">Start</string>
    <string name="your_turn">Your turn %s</string>
    <string name="fill_names">Fill the player names to start the game</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_easy">Easy (random)</string>
    <string name="difficulty_hard">Hard (minimax)</string>
    <string name="computer_name">Computer</string>
    <string name="play_again_title">Do you want to play again?</string>
    <string name="same_names">Yes! Same names</string>
    <string name="different_names">Yes! Different names</string>
    <string name="quit">Quit!</string>
    <string name="won_game">%s won the game!</string>
    <string name="draw_game">The game was a draw!</string>
</resources>
